--- a/webEval/webEval/Views/Shared/_Layout.cshtml
+++ b/webEval/webEval/Views/Shared/_Layout.cshtml
@@ -24,6 +24,7 @@
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                     <li>@Html.ActionLink("Student", "Index", "Students")</li>
+                    <li>@Html.ActionLink("Note", "Index", "Notes")</li>
 
                 </ul>
             </div>
